--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maestro Russia</title>
+    <title>Mesto Russia</title>
     <link rel="stylesheet" href="./pages/index.css">
 </head>
 
@@ -90,7 +90,7 @@
     <footer class="footer">
         © 2023 Mesto Russia
     </footer>
-    <script src="index.js"></script>
+    <script src="/index.js"></script>
 </body>
 
 </html>
