--- a/index.html
+++ b/index.html
@@ -2,95 +2,80 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mesto Russia</title>
-    <link rel="stylesheet" href="./pages/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title lang="eng">Mesto Russia</title>
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body class="page">
-    <div class="popup popup_opened">
-        <div class="popup__container">
-            <button type="reset" class="popup__close"></button>
-            <div class="popup__info">
-                <h2 class="popup__title">Редактировать профиль</h2>
-                <div class="popup__inputs">
-                    <input type="text" id="name" name="name" class="popup__input-name" value="Жак-Ив Кусто">
-                    <input type="text" id="description" name="description" class="popup__input-name"
-                        value="Исследователь океана">
-                </div>
-                <button type="submit" class="popup__button">Сохранить</button>
-            </div>
+  <header class="header">
+    <div class="header__logo"></div>
+  </header>
+  <main class="content">
+    <section class="profile">
+      <div class="profile__summary">
+        <div class="profile__avatar"></div>
+        <div class="profile__info">
+          <div class="profile__name">
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <button type="button" class="profile__edit-btn"></button>
+          </div>
+          <p class="profile__description">Исследователь океана</p>
         </div>
+      </div>
+      <button type="button" class="profile__add-btn"></button>
+    </section>
+    <section class="elements">
+    </section>
+  </main>
+  <footer class="footer">
+    <p lang="eng">© 2023 Mesto Russia</p>
+  </footer>
+  <div class="popup" id="edit-ptofile">
+    <div class="popup__container">
+      <button type="button" class="popup__close"></button>
+      <div class="popup__info">
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form name="persInfo" class="popup__inputs" id="persInfo">
+          <input type="text" id="name" name="name" class="popup__input-name" value="Жак-Ив Кусто">
+          <input type="text" id="description" name="description" class="popup__input-name" value="Исследователь океана">
+        </form>
+        <button type="submit" class="popup__button" form="persInfo">Сохранить</button>
+      </div>
     </div>
-    <header class="header">
-        <div class="header__logo"></div>
-        <div class="header__line"></div>
-    </header>
-    <main class="content">
-        <div class="profile">
-            <div class="profile__summary">
-                <div class="profile__avatar"></div>
-                <div class="profile__info">
-                    <div class="profile__name">
-                        <h2 class="profile__title">Жак-Ив Кусто</h2>
-                        <button class="profile__editBtn"></button>
-                    </div>
-                    <p class="profile__description">Исследователь океана</p>
-                </div>
-            </div>
-            <button class="profile__addBtn"></button>
-        </div>
-        <section class="elements">
-            <div class="elements__element">
-                <img class="elements__photo" alt="Карачаевск" src="./images/kirill-pershin-1088404-unsplash.jpg">
-                <div class="elements__info">
-                    <h3 class="elements__title">Карачаевск</h3>
-                    <button type="button" class="elements__button"></button>
-                </div>
-            </div>
-            <div class="elements__element">
-                <img class="elements__photo" alt="Гора Эльбрус" src="./images/kirill-pershin-1404681-unsplash.png">
-                <div class="elements__info">
-                    <h3 class="elements__title">Гора Эльбрус</h3>
-                    <button type="button" class="elements__button"></button>
-                </div>
-            </div>
-            <div class="elements__element">
-                <img class="elements__photo" alt="Домбай" src="./images/kirill-pershin-1556355-unsplash.png">
-                <div class="elements__info">
-                    <h3 class="elements__title">Домбай</h3>
-                    <button type="button" class="elements__button"></button>
-                </div>
-            </div>
-            <div class="elements__element">
-                <img class="elements__photo" alt="Гора Эльбрус" src="./images/kirill-pershin-1404681-unsplash.png">
-                <div class="elements__info">
-                    <h3 class="elements__title">Гора Эльбрус</h3>
-                    <button type="button" class="elements__button"></button>
-                </div>
-            </div>
-            <div class="elements__element">
-                <img class="elements__photo" alt="Домбай" src="./images/kirill-pershin-1556355-unsplash.png">
-                <div class="elements__info">
-                    <h3 class="elements__title">Домбай</h3>
-                    <button type="button" class="elements__button"></button>
-                </div>
-            </div>
-            <div class="elements__element">
-                <img class="elements__photo" alt="Карачаево-Черкесская республика"
-                    src="./images/kirill-pershin-1088404-unsplash.jpg">
-                <div class="elements__info">
-                    <h3 class="elements__title">Карачаево-Черкесская республика</h3>
-                    <button type="button" class="elements__button"></button>
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer class="footer">
-        © 2023 Mesto Russia
-    </footer>
-    <script src="/index.js"></script>
+  </div>
+  <div class="popup" id="add-element">
+    <div class="popup__container">
+      <button type="button" class="popup__close"></button>
+      <div class="popup__info">
+        <h2 class="popup__title">Новое место</h2>
+        <form name="form-add" class="popup__inputs" id="form-add">
+          <input type="text" id="title" name="title" class="popup__input-name" placeholder="Название">
+          <input type="text" id="link" name="link" class="popup__input-name" placeholder="Ссылка на картинку">
+        </form>
+        <button type="submit" class="popup__button" form="form-add">Создать</button>
+      </div>
+    </div>
+  </div>
+  <div class="popup" id="zoom-element">
+    <div class="popup__container">
+      <button type="button" class="popup__close"></button>
+      <img class="popup__image-zoom" src="" alt="">
+      <h3 class="popup__image-title"></h3>
+    </div>
+  </div>
+  <template id="card">
+    <article class="elements__element">
+      <img class="elements__photo" alt="" src="">
+      <div class="elements__delete"></div>
+      <div class="elements__info">
+        <h2 class="elements__title"></h2>
+        <button type="button" class="elements__button"></button>
+      </div>
+    </article>
+  </template>
+  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
